--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -5,9 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "cryptography>=46.0.5",
     "ipykernel>=7.2.0",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.8",
     "numpy>=2.4.2",
+    "odfpy>=1.4.1",
     "pandas>=3.0.0",
+    "pymysql>=1.1.2",
+    "python-dotenv>=1.2.1",
+    "sqlalchemy>=2.0.46",
 ]
